src/app/timeline/timeline.component.css
/*.enviar{
    -webkit-border-radius: 3px;
    -moz-border-radius: 3px;
    border-radius: 2px;
    font-size: 1.3em;
    border: 1px solid #FF5722;
    background: #ff715b;
    color: #fff;
    padding: 10px 10px;
    margin: 0 auto;
}

q{
  font-size: 1.75rem;
  font-family: 'Helvetica Neue', Helvetica, sans-serif !important;
  font-weight: 200;
  color:#333;
  }

  .referenceauthor{
  float:right;
  }

  .volunteerrole{
    float: left;
    margin-right: 10px;
  }*/


/*  ----- Editor --------------  */
/*
.editor{font-family: 'Helvetica Neue', Helvetica, sans-serif !important;
font-size: 13px;
font-style: normal;
font-variant: normal;
font-weight: 300;
line-height: 19.5px;
color: #333333;
text-align: justify!important;}
.editor p{font-family: 'Helvetica Neue', Helvetica, sans-serif !important;
font-size: 13px !important;
font-style: normal;
font-variant: normal;
font-weight: 300;
line-height: 19.5px;
color: #333333;
text-align: justify!important;}
.editor ul{ margin-left: 30px; list-style: inherit;}
.editor ul li{font-family: 'Helvetica Neue', Helvetica, sans-serif !important;
font-size: 13px;
font-style: normal;
font-variant: normal;
font-weight: 300;
line-height: 19.5px;
color: #333333!important;
text-align: justify!important;}
.editor div ul{ margin-left: 30px; list-style: inherit;}
.editor div ul li{font-family: 'Helvetica Neue', Helvetica, sans-serif !important;
font-size: 13px;
font-style: normal;
font-variant: normal;
font-weight: 300;
line-height: 19.5px;
color: #333333!important;;
text-align: justify!important;}

.sectiontitle{
  font-family: 'Helvetica Neue', Helvetica, sans-serif !important;
  font-weight: 200;
  color:#000000;
}

.row{margin-left: 0px!important;margin-right:0px!important;}


.embed-responsive-item{
  height:340px!important;
  width:100%!important;
}
.contact-link{color:#f2f2f2;}
.contact-link a{color:#f2f2f2;}

.editor a{color:#226CAA!important;}
.editor p a{color:#226CAA!important;}
.editor ul li a{color:#226CAA!important;}

@media only screen and (max-width: 1700px) {
  .sectiontitle{padding-left:50px!important;}
  .embed-responsive-item{
    height:340px!important;
  width:100%!important;
  }
}*/

/* -------------------------------- 

Primary style

-------------------------------- */
/*
cdk-virtual-scroll-viewport {
  height: 80vh;
  width: 100%;
}*/

html * {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

*, *:after, *:before {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

#body {
  font-size: 100%;
  font-family: "Droid Serif", serif!important;
  color: #7f8c97;
  background: #f2f2f2!important;
}

a {
  text-decoration: none;
  font-family: "Open Sans", sans-serif;
}

img {
  max-width: 100%;
}

h1, h2 {
  font-family: "Open Sans", sans-serif;
  font-weight: bold;
}

/* -------------------------------- 

Modules - reusable parts of our design

-------------------------------- */

.cd-container {
  /* this class is used to give a max-width to the element it is applied to, and center it horizontally when it reaches that max-width */
  width: 90%;
  max-width: 1170px;
  margin: 0 auto;
}
.cd-container::after {
  /* clearfix */
  content: '';
  display: table;
  clear: both;
}

/* -------------------------------- 

Main components 

-------------------------------- */
/*header {
  text-align: center;
  background: #5A6B7D;
  height: 100vh;
}
header .row{
  padding-top:15px;
}
header img{
  border-radius: 50%;
  width: 10em!important;
  height: 10em!important;
  border: 2px solid #f2f2f2;

}

.info p{font-family: "Helvetica Neue",Helvetica,Arial,sans-serif; font-size:1.3em;color:#f2f2f2!important;}
.special{color:#f2f2f2!important;font-size: 1.7em!important;}

header h1 {
  color: white;
  font-size: 18px;
  font-size: 1.75rem;
}
@media only screen and (min-width: 1170px) {

  header .row{padding-top:30px;}
  header h1 {
    font-size: 24px;
    font-size: 3.7rem;
  }
}*/
html,body
{
    width: 100%;
    margin: 0px;
    padding: 0px;
    overflow-x: hidden; 
}

header {
  margin-bottom: 200px;
}
#cd-timeline {
  position: relative;
  padding: 2em 0;
  margin-top: 2em;
  margin-bottom: 2em;

}
#cd-timeline::before {
  /* this is the vertical line */
  content: '';
  position: absolute;
  top: 0;
  left: 18px;
  height: 100%;
  width: 4px;
  background: #34495e;
}
@media only screen and (min-width: 1170px) {
  #cd-timeline {
    margin-top: 3em;
    margin-bottom: 3em;
  }
  #cd-timeline::before {
    left: 50%;
    margin-left: -2px;
  }
}

.cd-timeline-block {
  position: relative;
  margin: 2rem 0;
  min-height: 250px;
}

.cd-timeline-block:after {
  content: "";
  display: table;
  clear: both;
}
.cd-timeline-block:first-child {
  margin-top: 0;
}
.cd-timeline-block:last-child {
  margin-bottom: 0;
}
@media only screen and (min-width: 1170px) {
  .cd-timeline-block {
    margin: 4em 0;
  }
  .cd-timeline-block:first-child {
    margin-top: 0;
  }
  .cd-timeline-block:last-child {
    margin-bottom: 0;
  }
}

.cd-timeline-img {
  position: absolute;
  top: 0;
  left: 0;
  width: 40px;
  height: 40px;
  border-radius: 50%;
  box-shadow: 0 0 0 4px #34495e, inset 0 2px 0 rgba(0, 0, 0, 0.08), 0 3px 0 4px rgba(0, 0, 0, 0.05);
}
.cd-timeline-img i {
  display: block;
  color: black;
  width: 600px;
  height: 600px;
  position: relative;
  left: 53%;
  top: 55%;
  margin-left: -12px;
  margin-top: -12px;
}
.cd-timeline-img.experience {
  background: #2E4057;
}
.cd-timeline-img.education {
  background: #9C3848;
}
.cd-timeline-img.teaching {
  background: #7FC6A4;
}
.cd-timeline-img.publication {
  background: #6CA6C1;
}

.cd-timeline-img.course {
  background: #FFAD69;
}

.cd-timeline-img.competition {
  background: #F5E663;
}

.cd-timeline-img.misc {
  background: #D6F8D6;
}
/* ... */

